# pyexpr

./: .gitignore  Makefile  README.md  pyproject.toml  radon.cfg
src/: expression.py
tests/: conftest.py  fixtures.py  test_differentiate.py  test_number.py  test_product.py  test_sum.py  test_variable.py
