[tool.poetry]
name = "pyexpr"
version = "0.1.0"
description = "Symbolic arithmetic and differentiation"
authors = ["zxul767 <willebaldo.gomez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^20.8b1"
vulture = "^2.1"
radon = "^4.2.0"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
